name:                pure-stream
version:             0.8.0.0
homepage:            purehs.org/doc/pure-stream
synopsis:            Streaming views
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-stream.git

library
  exposed-modules:     Pure.Stream
                       Pure.Stream.Internal
  build-depends:       base,
                       pure-core,
                       pure-intersection,
                       pure-default,
                       pure-elm,
                       pure-prop
  hs-source-dirs:      src
  default-language:    Haskell2010
